[package]
name = "memory_allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloc = { version = "1.0.0", optional = true }

[features]
default = ["std"]  # Default uses the standard library
std = []           # Empty feature for standard library
alloc = ["dep:alloc"]  # Add the alloc dependency here